@@ -10,12 +10,13 @@ import java.io.BufferedReader;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
 import java.net.URL;
+import java.net.URI;
 import java.util.regex.Pattern;
 
 public class UpdateUtil {
     private static String getJsonString(String sURL) {
         try {
-            URL obj = new URL(sURL);
+            URL obj = URI.create(sURL).toURL();
             HttpURLConnection con = (HttpURLConnection) obj.openConnection();
             BufferedReader in = new BufferedReader(new InputStreamReader(con.getInputStream()));
             String inputLine;
